--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "dia-dos-namorado",
+  "name": "caixa-saudade-api",
   "version": "1.0.0",
-  "main": "api.js",
+  "description": "API da caixa do botão da saudade ❤️",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node api.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "body-parser": "^2.2.0",
+    "express": "^4.18.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "body-parser": "^1.20.0"
   }
 }
