--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "caixa-saudade-api",
   "version": "1.0.0",
-  "description": "API da caixa do botão da saudade ❤️",
   "main": "server.js",
   "scripts": {
-    "start": "node api.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.0",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.0"
+    "body-parser": "^1.20.2"
   }
 }
